import { each, range } from 'lodash';

import Group      from 'lanes/screens/group';
import Screen     from 'lanes/screens/definition';
import Menu       from 'lanes/workspace/menu';
import MenuGroup  from 'lanes/workspace/menu-group';
import MenuOption from 'lanes/workspace/menu-option';

import { Snapshot } from 'lanes/testing/screens';
import { getTestScreen } from '../test-models';

describe('Workspace Menu', () => {
    beforeEach(() => {
        Group.enabled_group_ids = [];
        each(range(0, 5), (i) => {
            const gid = `group-${i}`;
            Group.enabled_group_ids.push(gid);
            Group.register({ id: gid, title: `Group # ${i}`, icon: `grp-${i}` });
            Screen.register({
                group_id: gid, icon: 'unknown', id: `screen-${i}`, title: `test screen for ${i}`
            });
        });
    });

    it('renders with a logout button', () => {
        const menu = shallow(<Menu />);
        expect(menu).toHaveRendered('Logout');
    });

    fit('renders groups', () => {
        const menu = shallow(<Menu />);
        expect(menu.find('Group').length).toEqual(5);
        expect(Snapshot(<Menu />)).toMatchSnapshot();
    });

    it('has groups with screens', () => {
        const group = shallow(<MenuGroup group={Group.all[0]} />);
        expect(group).not.toHaveRendered('MenuOption');

        getTestScreen({ id: 'new', group_id: Group.all[0].id });
        expect(group).toHaveRendered('MenuOption');
        expect(Snapshot(<MenuGroup group={Group.all[0]} />)).toMatchSnapshot();
    });

    it('has renders a menu option', () => {
        const screen = getTestScreen();
        const option = shallow(<MenuOption screen={screen} />);
        expect(option).toHaveRendered(`Anchor[path="/${screen.id}/"]`);
        expect(option).toHaveRendered(`Icon[type="${screen.icon}"]`);
        expect(Snapshot(<MenuOption screen={screen} />)).toMatchSnapshot();
    });
});
